<resources>
    <string name="app_name" translatable="false">Niobio Pools</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_settings">Wallets</string>
    <string name="menu_pools">Pools</string>
    <string name="menu_mining">Mining</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_add_address">Add Wallet</string>
    <string name="title_activity_add_pool">Add Pool</string>
    <string name="title_activity_edit_address">Edit Wallet</string>
    <string name="title_activity_edit_pool">Edit Pool</string>

    <!-- Strings related to login -->
    <string name="prompt_account_name">Name</string>
    <string name="prompt_address">Wallet Address</string>
    <string name="save_model">Save</string>
    <string name="delete_model">Delete</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_saving_item">Error saving item</string>
    <string name="error_field_required">This field is required</string>
    <string name="prompt_active">Active</string>
    <string name="configure_account">Register a niobio wallet to continue</string>
    <string name="title_activity_pools">Niobio Pools</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pool_url">Pool API URL</string>
    <string name="delete_sure">Delete item?</string>
    <string name="delete_title">Delete item</string>
    <string name="wallet_copied">Wallet copied</string>
    <string name="recommenddation">Check your mining status</string>
    <string name="menu_send">Send</string>
    <string name="menu_about">About</string>
    <string name="menu_share">Share</string>
    <string name="about_text">App to monitore Niobio Pools mining. More info at https://github.com/dhiogoboza/niobiopools-app.</string>
    <string name="choose_one">Choose one</string>
    <string name="menu_donate">Donate</string>
    <string name="donate_text">Click below to copy my wallet, thank you!</string>
    <string name="donate_wallet" translatable="false">NB9mJ4YMCp1Fi2PtSKeMf8bz92387qymMEtf76hkCFvbExVkLHqeWCVR1xQgMP9zi5TA6ehKvWQbZNMPjH3Ha22QKUNw5iZ</string>
    <string name="copy">Copy</string>
</resources>
